# trackit

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
docs/adr/: 0001-layer-boundaries.md  0002-user-visible-filtering-semantics.md  0003-domain-error-taxonomy.md  README.md
docs/playbooks/: category-filtering.md  cli.md  data-filters.md  database.md  domain-services.md  testing.md
migrations/: README.md  migrate_add_category_type.py  migrate_add_debit_credit_format.py
src/trackit/: __init__.py
src/trackit/cli/: __init__.py  account_resolution.py  date_filters.py  error_handling.py  main.py
src/trackit/cli/commands/: __init__.py  account.py  add.py  categorize.py  category.py  format.py  (+5 more)
src/trackit/database/: __init__.py  base.py  factories.py  mappers.py  models.py  sqlalchemy_db.py  sqlite.py
src/trackit/domain/: __init__.py  account.py  category.py  csv_format.py  csv_import.py  entities.py  errors.py  summary.py  transaction.py
src/trackit/utils/: __init__.py  account_resolver.py  amount_parser.py  date_parser.py
tests/: __init__.py  conftest.py  test_account.py  test_category.py  test_cli_date_filters.py  test_csv_format_service.py  test_csv_import_service.py  test_database_interface.py  test_date_parser.py  test_entities.py  test_format.py  test_import.py  test_integration.py  test_mappers.py  test_summary.py  test_summary_service.py  test_transaction.py
tests/fixtures/: sample_transactions.csv  sample_transactions_debit_credit.csv  sample_transactions_duplicates.csv  sample_transactions_missing_cols.csv  sample_transactions_no_id.csv
